# rfp-analyzer

./: .gitignore  AI Engineer Assessment_ RFP (Request for propsal) Analysis with RAG + LLM.docx
rfp_analyzer/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
rfp_analyzer/src/: __init__.py  main.py
rfp_analyzer/src/api/: __init__.py  app.py  dependencies.py  routes.py
rfp_analyzer/src/chunking/: __init__.py  intelligent_chunker.py  strategies.py
rfp_analyzer/src/config/: __init__.py  settings.py
rfp_analyzer/src/evaluation/: __init__.py  evaluator.py  metrics.py  scenarios.py
rfp_analyzer/src/graph/: __init__.py  nodes.py  state.py  workflow.py
rfp_analyzer/src/llm/: __init__.py  analyzer.py  output_parser.py  prompts.py
rfp_analyzer/src/loaders/: __init__.py  base.py  pdf_loader.py
rfp_analyzer/src/models/: __init__.py  documents.py  requests.py  responses.py
rfp_analyzer/src/retrieval/: __init__.py  context_enricher.py  pipeline.py  reranker.py
rfp_analyzer/src/utils/: __init__.py  logging.py
rfp_analyzer/src/vectorstore/: __init__.py  chroma_store.py  embeddings.py
rfp_analyzer/tests/: __init__.py  conftest.py  test_api.py  test_chunking.py  test_models.py  test_output_parser.py  test_scenarios.py
